--- a/fotookta.html
+++ b/fotookta.html
@@ -3,8 +3,7 @@
 <title>Foto Okta</title>
 </head>
 <body background="bgokta.jpg">
-
-<a href="dataokta.html"><img src="Okta.JPG" width="250" height="250"></a>
+<a href="dataokta.html"><img src="okta.jpg" width="250" height="250"></a>
 
 </body>
 </html>
